# ConfiGator

./: .env  .gitignore  LICENSE  README.md  configator.py  generate.py  gradle.build  main.py  pyproject.toml
.github/: cspell.json
.github/ISSUE_TEMPLATE/: default-issue.md  icebox-issues.md
.github/workflows/: main.yml
ConfiGator/: ConfiGator.py  create_gatorgradle_yml.py  generate.py  generate_build_gradle.py  main.py
config/: gatorgrader.yml  indentation.yml
configator/: build.gradle  configator.py  create_actions_config.py  create_gatorgradle_yml.py  generate_build_gradle.py  generate_readme.py  main.py
configator/.github/workflows/: grade.yml
configator/config/: gatorgrader.yml
githubactions/: create_actions_config.py
src/: ConfiGator.py  main.py
src/config/: gatorgrader.yml  generate.py
tests/: test_ConfiGator.py  test_configator.py  test_create_actions_config.py  test_create_gatorgradle_yml.py  test_generate_build_gradle.py  test_generate_readme  test_main.py  test_say_hello.py
