[tool.poetry]
name = "PyConfiGator"
version = "1.0.3"
description = "A Configuration File Generator for GatorGradle"
authors = ["Kyrie Doniz", "Kevin Lee", "Kai'lani Woodard", "Liam Connelly", "Adam Shinomiya", "Peter Snipes"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "configator" }
]

[tool.poetry.scripts]
configator = 'configator.main:app'

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
taskipy = "^1.9.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"
pytest-mock = "^3.6.1"

[tool.taskipy.tasks]
test = "pytest --cov-report term-missing --cov-fail-under=70  --cov-branch --cov=configator tests/"
lint = "pylint configator/ tests/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
